[docs] Update to avoid conflict with new markdown generator